--- a/style.css
+++ b/style.css
@@ -348,7 +348,8 @@ section {
 .experience-details-container {
   display: flex;
   justify-content: center;
-  flex-direction: column;
+/*   flex-direction: column; */
+  flex-wrap:wrap;
 }
 
 .article-container {
